...
    }
    if (PaymentAction.REFUND in state.actions) {
        SecondaryButton(
            stringResource(R.string.detail_refund),
            onRefund,
            icon = Icons.AutoMirrored.Filled.Undo,
            modifier = Modifier.testTag("detailRefund"),
        )
    }
    if (PaymentAction.CANCEL in state.actions) {
        SecondaryButton(
            stringResource(if (sale.tipOnReceipt) R.string.detail_cancel_payment else R.string.detail_cancel_pre_auth),
            onCancel,
...
